--- a/image.html
+++ b/image.html
@@ -11,6 +11,7 @@
     <source src="http://jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v" type="video/mp4">
     </video>
     -->
+    img: (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org
     <img id="WTFAREYOUDOING" src="Big_Buck_Bunny_Trailer.jpg" alt="Girl in a jacket" width="100" height="100"> 
     <canvas id="my-canvas" width="100" height="100"></canvas>
     <input type="number" id="sizeinput" value=100>
