--- a/video.html
+++ b/video.html
@@ -16,4 +16,5 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.0.0/dist/tf.min.js"></script>
+<script src="./colorconverter.js"></script>
 <script src="./superResVideo.js"></script>
